--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 	stages {
 		stage('Checkout SCM') {
 			steps {
-				git 'https://github.com/xcxpcxkes/JenkinsDependencyCheckTest'
+				git 'https://github.com/xcxpcxkes/JenkinsDependencyCheckTest.git'
 			}
 		}
 
